@@ -22,7 +22,6 @@ import java.io.IOException;
 import java.io.UncheckedIOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.List;
 
 import org.junit.jupiter.api.Test;
@@ -33,20 +32,20 @@ import org.junit.jupiter.api.extension.ExtendWith;
  *
  */
 @ExtendWith(SpotBugsExtension.class)
-public class SpotBugsExtensionTest {
+class SpotBugsExtensionTest {
     @Test
-    public void test(SpotBugsRunner spotbugs) {
+    void test(SpotBugsRunner spotbugs) {
         addAuxClassPathEntry(spotbugs, "build/spotbugs/auxclasspath/spotbugsMain");
         addAuxClassPathEntry(spotbugs, "build/spotbugs/auxclasspath/spotbugsTest");
-        spotbugs.performAnalysis(Paths.get("build/classes/java/main/edu/umd/cs/findbugs/test/SpotBugsRunner.class"));
+        spotbugs.performAnalysis(Path.of("build/classes/java/main/edu/umd/cs/findbugs/test/SpotBugsRunner.class"));
     }
 
     private void addAuxClassPathEntry(SpotBugsRunner spotbugs, String dir) {
-        final Path dependencies = Paths.get(dir);
+        final Path dependencies = Path.of(dir);
         try {
             final List<String> lines = Files.readAllLines(dependencies);
             for (String line : lines) {
-                Path path = Paths.get(line);
+                Path path = Path.of(line);
                 if (Files.isReadable(path)) {
                     spotbugs.addAuxClasspathEntry(e -> {
                     }, path);
